Added Meetup oauth and api support Added basic login activity that navigate user to meetup login page

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,19 +25,22 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:26.+'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    testCompile 'junit:junit:4.12'
     // to see latest version available:
     // https://maven.fabric.io/public/com/crashlytics/sdk/android/crashlytics/maven-metadata.xml
     compile('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
         transitive = true
     }
+    compile 'com.android.support:appcompat-v7:26.+'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.codepath.libraries:android-oauth-handler:1.2.5'
+    compile 'com.android.support:design:26.+'
+    testCompile 'junit:junit:4.12'
 }
 
 android {
     compileSdkVersion 26
     buildToolsVersion "26.0.1"
+    dataBinding.enabled = true
     defaultConfig {
         applicationId "com.supermeetup.supermeetup"
         minSdkVersion 18
