add all categories list and RecommendEvents activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,6 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".activities.HomeActivity"></activity>
-
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="1012beeb484a1c77da024d0facdd5d6d49a1e59a" />
@@ -43,6 +41,12 @@
                     android:host="@string/intent_host" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".activities.HomeActivity"></activity>
+
+        <activity android:name=".activities.RecommendEventsActivity"></activity>
+
+        <activity android:name=".activities.CategoryActivity" android:theme="@style/AppTheme.transparent"></activity>
     </application>
 
 </manifest>
