--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
         transitive = true
     }
     compile 'com.android.support:appcompat-v7:26.+'
+    compile 'com.android.support:recyclerview-v7:26+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.codepath.libraries:android-oauth-handler:1.2.5'
     compile 'com.android.support:design:26.+'
