--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,9 +32,10 @@ dependencies {
     }
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support:recyclerview-v7:26+'
+    compile 'com.android.support:design:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.codepath.libraries:android-oauth-handler:1.2.5'
-    compile 'com.android.support:design:26.+'
+    compile 'com.google.android.gms:play-services-maps:11.0.4'
     compile 'com.google.code.gson:gson:2.7'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
